--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock,Paper, Scissors</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="root">
+      <header class="header">Rock,Paper,Scissors?</header>
+      <div class="players">
+          <div class="playerDiv">
+              <h1>Player</h1>
+              <h1>Score</h1>
+            </div>
+            <div class="computerDiv">
+                <h1>Score</h1>
+                <h1>Computer</h1>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
