--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <div class="root">
       <header class="header">Rock,Paper,Scissors?</header>
       <div class="players">
-          <div class="playerDiv">
-              <h1>Player</h1>
-              <h1>Score</h1>
+        <div class="playerDiv">
+          <div class="playerInfo">
+            <div class="player">
+                <h1>Player</h1>
             </div>
-            <div class="computerDiv">
-                <h1>Score</h1>
-                <h1>Computer</h1>
-            </div>
+            <h1>Score - 0</h1>
+          </div>
         </div>
+        <div class="computerDiv">
+          <div class="computerInfo">
+            <h1>0 - Score</h1>
+            <h1>Computer</h1>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
