--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="root">
-      
-    </div>
+    <div class="root"></div>
     <script src="script.js"></script>
   </body>
 </html>
