--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class="root"></div>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
